--- a/index.html
+++ b/index.html
@@ -20,46 +20,45 @@
 
 </head>
 <body>
-  <div class="container">
+  <main role="main">
 
+     <div class="container">
+        <div class="content">
+          <section>
+          <h1>Get <span> insights</span> that help your business grow.</h1>
+          <p> Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+          experience, and overall efficiency.</p>
+          </section>
 
-    <div class="content">
+          <footer>
+            <div class="companies">
+              <h1> 10k+ </h1>
+              <p>companies</p>
+            </div>
 
-      <h1>Get <span> insights</span> that help your business grow.</h1>
+            <div class="templates">
+              <h1>314</h1>
+              <p> templates</p>
+            </div>
 
-      <p> Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-      experience, and overall efficiency.</p>
-
-      <div class="comtemque">
-        <div class="companies">
-          <h1> 10k+ </h1>
-          <p>companies</p>
+            <div class="queries">
+              <h1> 12m+</h1>
+              <p>queries</p>
+            </div>
+          </footer>
         </div>
 
-        <div class="templates">
-          <h1>314</h1>
-          <p> templates</p>
-        </div>
+        <picture>
+          <img src="\images\image-header-desktop.jpg" alt="header-desktop" class="desktop">
 
-        <div class="queries">
-          <h1> 12m+</h1>
-          <p>queries</p>
-        </div>
-      </div>
+          <img src="\images\image-header-mobile.jpg" alt="header-mobile" class="mobile">
+       </picture>
+     </div>
 
-    </div>
-
-
-    <div class="header-img">
-      <img src="images\image-header-desktop.jpg" alt="" class="desktop">
-
-      <img src="images\image-header-mobile.jpg" alt="" class="mobile">
-    </div>
-
-
-  </div>
+     
+  </main>
  
-
+ 
   <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
