--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-  <main role="main">
+  <main >
 
      <div class="container">
         <div class="content">
@@ -48,9 +48,9 @@
         </div>
 
         <picture>
-          <img src="\images\image-header-desktop.jpg" alt="header-desktop" class="desktop">
+          <img src="images\image-header-desktop.jpg" alt="header-desktop" class="desktop">
 
-          <img src="\images\image-header-mobile.jpg" alt="header-mobile" class="mobile">
+          <img src="images\image-header-mobile.jpg" alt="header-mobile" class="mobile">
        </picture>
      </div>
 
